tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/service_entry_resources/external-https-wildcard-services-new-port.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-https-wildcard-services_new_port
spec:
  hosts:
    - api.dropboxapi.com
    - www.googleapis.com
    - api.facebook.com
    - "*.newrelic.com"
    - "*.wikipedia.org"
    - "*.slack.com"
  exportTo:
    - "*"
  location: MESH_EXTERNAL
  ports:
    - name: https-80
      number: 80
      protocol: HTTPS
  resolution: NONE
